# faces_framework

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
headpose/posit/data/: mean_face_3D_21.txt  mean_face_3D_24.txt  mean_face_3D_29.txt  mean_face_3D_68.txt  mean_face_3D_84.txt  mean_face_3D_98.txt
headpose/posit/include/: MeanFace3DModel.hpp  ModernPosit.h
headpose/posit/src/: MeanFace3DModel.cpp  ModernPosit.cpp
include/: FaceAlignment.hpp  FaceAnnotation.hpp  FaceComponent.hpp  FaceComposite.hpp  FaceDetector.hpp  FaceHeadPose.hpp  FaceRecognition.hpp  Viewer.hpp  trace.hpp  utils.hpp
src/: FaceAlignment.cpp  FaceDetector.cpp  FaceHeadPose.cpp  FaceRecognition.cpp  Viewer.cpp  utils.cpp
test/: 000909960.avi  faces_framework_test.cpp
